--- a/src/app/shared/components/labeled-slider/labeled-slider.component.theme.scss
+++ b/src/app/shared/components/labeled-slider/labeled-slider.component.theme.scss
@@ -8,7 +8,7 @@
 
     $label-color: mat-color($foreground, secondary-text, if($is-dark-theme, 0.7, 0.6));
     // $focused-label-color: mat-color($primary, text);
-    $focused-label-color: mat-color($foreground, divider, if($is-dark-theme, 1, 0.87));;
+    $focused-label-color: mat-color($foreground, divider, if($is-dark-theme, 1, 0.87));
     $disabled-label-color: mat-color($foreground, divider, if($is-dark-theme, 0.7, 0.42));
 
     .labeled-slider {
